pug.log
/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (396:0)
    at pp$4.raise (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at pp.unexpected (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at pp$3.parseExprAtom (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at pp$3.parseExprSubscripts (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at pp$3.parseMaybeUnary (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at pp$3.parseExprOps (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at pp$3.parseMaybeConditional (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at pp$3.parseMaybeAssign (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at pp$1.parseVar (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at pp$1.parseVarStatement (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 21790,
  loc: Position { line: 396, column: 0 },
  raisedAt: 21791
}

Node.js v18.12.1
/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (396:0)
    at pp$4.raise (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at pp.unexpected (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at pp$3.parseExprAtom (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at pp$3.parseExprSubscripts (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at pp$3.parseMaybeUnary (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at pp$3.parseExprOps (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at pp$3.parseMaybeConditional (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at pp$3.parseMaybeAssign (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at pp$1.parseVar (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at pp$1.parseVarStatement (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 22732,
  loc: Position { line: 396, column: 0 },
  raisedAt: 22733
}

Node.js v18.12.1
